# pi4-garden-bird-alert

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/bird_guard/: pyproject.toml
apps/bird_guard/config/: config.toml
apps/bird_guard/src/bird_guard/: config.py  main.py
config/: config.toml
data/dummy_images/: CREDIT.md
data/dummy_images/ducks_5fps/: README.md
examples/: benchmark_record_speed.py  draw_text_demo.py
libs/camera_core/: pyproject.toml
libs/camera_core/examples/: benchmark_record_speed.py
libs/camera_core/src/camera_core/: camera.py  config.py
libs/notify_core/: pyproject.toml
libs/notify_core/src/notify_core/: config.py  ntfy_client.py
libs/vision_core/: pyproject.toml
src/bird_guard/: config.py  main.py  utils.py
src/bird_guard/camera/: camera.py  camera_config.py
src/bird_guard/notify/: notify_config.py  ntfy_client.py
src/bird_guard/vision/: vision.py  vision_config.py
src/bird_guard/vision/utils/: debug_utils.py  image_utils.py  vision_utils.py
tools/: video_background_extractor.py  video_frame_extractor_gui.py  video_recorder_gui.py
