[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-guard"
version = "0.1.0"
description = "Garden bird detection app"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "numpy<2",
    "requests"
]

[project.scripts]
bird-guard = "bird_guard.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
