[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notify-core"
version = "0.1.0"
description = "Abstraction for NTFY message handling"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
